# zosci-tools

./: README.md  mypy.ini  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
.github/workflows/: tox.yml
zosci_tools/: constants.py  lp_recipe.py  utils.py
zosci_tools/tests/: test_lp_recipe.py
zosci_tools/tests/fixtures/fake_repo/: .gitreview
