[metadata]
name = zosci-tools
author = OpenStack Charmers
author_email = openstack-charmers@lists.launchpad.net
summary = zosci automation tools
description_file = README.md
description_content_type = text/markdown; charset=UTF-8
home_page = https://github.com/openstack-charmers/zosci-tools
project_urls =
    Bug Tracker = https://github.com/openstack-charmers/zosci-tools/issues
    Source Code = https://github.com/openstack-charmers/zosci-tools
license = Apache-2
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    ci
    zuul

[files]
packages =
    zosci_tools

[entry_points]
console_scripts =
    zosci-lp-recipe = zosci_tools.lp_recipe:main

[flake8]
# E123, E125 skipped as they are invalid PEP-8.
show-source = True
ignore = E123,E125
builtins = _
